--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="col-lg-12 " style="display: flex;justify-content: center;align-items: center;">
                     <ul class="mb-0 list-unstyled neg_margin">
                  
-                        <li class="icons"><a href="./index.html"><i class="fas fa-home" aria-hidden="true"></i></a></li>
+                        <li class="icons"><a href="https://cryptocade.net/"><i class="fas fa-home" aria-hidden="true"></i></a></li>
                         <li class="icons"><a href="https://twitter.com/CryptocadeERC"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
                         <li class="icons"><a href="https://t.me/CRYPTOCADEPORTAL"><i class="fas fa-paper-plane" aria-hidden="true"></i></a></li>
 
